Attempting to fix corners on mobile when loading images

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -212,6 +212,9 @@ a:hover {
 
     filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur stdDeviation="1" /></filter></svg>#filter');
     -webkit-filter: blur(3px);
+    -moz-filter: blur(3px);
+    -o-filter: blur(3px);
+    -ms-filter: blur(3px);
     filter: blur(3px);
 
     -webkit-transform: scale(1.05);
